# JobYaari_Chatbot

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: test_embedding_endpoint.py
src/: config.py  logging_config.py  main.py
src/agent/: graph.py  nodes.py  runtime.py  state.py  streaming_agent.py  tool_calling.py
src/agent/tools/: search_jobs.py
src/auth/: dependencies.py
src/backend/: app.py
src/chatbot/: .dockerignore  Dockerfile  chatbot_app.py  requirements.txt
src/db/: chat_ops.py  client.py  job_ops.py  models.py  resume_ops.py
src/db/migrations/: env.py
src/factories/: embedding_factory.py  llm_factory.py
src/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  streamlit_app.py
src/frontend/src/: App.tsx  auth_client.ts  styles.css
src/routes/: chat.py  jobs.py  pdf_upload.py  voice.py
src/scraper/: .dockerignore  Dockerfile  fetch_all_jobs.py  fetch_jobs_info.py  job_ingestion_pipeline.py  requirements.txt  scraper_loop.py  supervisord.conf  vector_utils.py
src/scraper/intershala/: accounts.py  ai_agent_development.py  android_app_development.py  backend_development.py  bank.py  cad_design.py  chartered_accountancy_ca.py  cloud_computing.py  cyber_security.py  electronics.py  engineering.py  front_end_development.py  full_stack_development.py  hr.py  product.py  teaching.py
src/services/chat/: state_builder.py
src/services/llm/: prompts.py  summarizer.py  warmup.py
src/services/resume/: resume_embedding.py  (+5 more)
src/utils/: embeddings.py  scraper_utils.py
(+22 files in other folders)
