[project]
name = "joblens-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "lxml>=6.1.0",
    "openai>=2.36.0",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pgvector>=0.4.2",
    "python-multipart>=0.0.28",
    "requests>=2.33.1",
    "undetected-chromedriver>=3.5.5",
]
